# a_s_man

./: README.md
1_3_2021202085_전한아솔_ver1/: CMakeLists.txt  PuyopuyoTetris.pro  gameoverwindow.cpp  gameoverwindow.h  games.cpp  games.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  puyopuyo.cpp  puyopuyo.h  puyopuyo.ui  puyotet.cpp  puyotet.h  puyotet.ui  tetris.cpp  tetris.h  tetris.ui  ui_puyopuyo.h  ui_puyotet.h  ui_tetris.h
Quine_Mc/: QM_code.txt  Quine_Mc.sln
Quine_Mc/Quine_Mc/: 1.txt  2.txt  20input.txt  3.txt  4.txt  Quine_Mc.vcxproj  input_minterm.txt  input_minterm1.txt  veryhard.txt  소스.cpp
Quine_Mc/Quine_Mc/x64/Debug/: Quine_Mc.exe.recipe  Quine_Mc.ilk  vc143.idb
Quine_Mc/Quine_Mc/x64/Debug/Quine_Mc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Quine_Mc.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
